...
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    android:orientation="vertical"
    tools:context=".WheatherActivity">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/txtbox_rounded"
        android:hint="Search"
        android:textColor="#000000"
        android:padding="10dp"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imgSearch"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-45dp"
        android:layout_marginLeft="340dp"
        app:srcCompat="@drawable/ic_stat_name" />

...
