...
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgWheather"
                        android:layout_width="fill_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/grp" />

                    <TextView
                        android:layout_width="wrap_content"
...
